test/should_fail/UseOfThisInMethod.oj

@implementation UseOfThisInMethod

- (void) foo
{
    this.doSomething();
}

@end
